[tool.poetry]
name = "pddlenv"
version = "0.1.0"
description = ""
authors = ["Clement Gehring <clement@gehring.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
pyperplan = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
flake8 = "^3.8.3"
mypy = "^0.782"
isort = "^5.4.2"

[tool.isort]
line_length = 100
known_first_party = ["pddlenv"]
multi_line_output = 0
skip = []

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
